fixed model bugs, added tests